styles.css
/* Variables */
:root {
    --clr-active: hsl(172, 67%, 45%);
    --clr-light: hsl(185, 41%, 84%);
    --clr-white: hsl(0, 0%, 100%);
    --text-faded: hsl(186, 14%, 43%);
    --text-dark:  hsl(183, 100%, 15%);
    --input: hsl(189, 41%, 97%);
    --header: 20vh;
}

body, html {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100%;
    box-sizing: border-box;
}

body {
    margin: 0;
    font-family: 'Space Mono', monospace;
    font-size: 24px;
    background-color: var(--clr-light);
}

/* Header */
header {
    background-color: var(--clr-light);
    height: var(--header);
    display: flex;
    align-items: center;
    justify-content: center;
}

header h1 {
    text-align: center;
    margin: 0;
    text-transform: uppercase;
    font-size: 1.25rem;
    letter-spacing: 0.7rem;
    line-height: 1.25;
    color: var(--text-faded);
}

/* Containers */
.main-container {
    width: 100vw;
    background-color: var(--clr-white);
    border-top-left-radius: 7.5vw;
    border-top-right-radius: 7.5vw;
}

.tip-container {
    width: 100%;
    text-align: center;
}

.calculation-container {
    width: 90%;
    margin: 0 auto;
    background-color: var(--text-dark);
    border-radius: 7.5%;
}

.btn-container {
    height: 50%;
    display: grid;
    grid-template-columns: repeat(2, 40%);
    grid-template-rows: repeat(3, 35%);
    grid-column-gap: 5vw;
    grid-row-gap: 5vw;
    justify-content: center;
    align-items: center;
    margin-bottom: 15%;
}



/* Sub Headers */
.sub-header {
    text-align: left;
    font-size: 0.9rem;
    color: var(--text-faded);
    margin: 10% 0 2% 7.25%;
    text-transform: uppercase;
}

#bill {
    padding-top: 10%;
} 

#num-of-people {
    margin-top: 22.5%;
}

#person {
    display: block;
    position: relative;
    left: 13%;
    bottom: 4vh;
    opacity: 0.6;
    box-sizing: border-box;
}

/* Btn */
.btn-tip {
    height: 100%;
    width: 100%;
    border-radius: 5%;
    border: none;
    background-color: var(--text-dark);
    color: var(--clr-white);
    font-family: 'Space Mono', monospace;
    font-size: 1.3rem;
    letter-spacing: 0.24rem;
}

#custom {
    background-color: var(--input);
    width: 95%;
    height: 95%;
}

#custom::placeholder {
    text-align: right;
    font-size: 1.3rem;
    letter-spacing: 0.1rem;
    font-weight: bold;
    margin-right: 5%;
    color: var(--text-faded);
    opacity: 0.75;
    text-transform: uppercase;
}

#custom:focus {
 color: var(--text-dark);
}


/* Inputs */
input {
    background-color: var(--input);
    color: var(--text-dark);
    border: none;
}

.input {
    width: 80%;
    height: 12.5%;
    margin: 0 auto;
    transition: background-color 100ms ease-in-out;
    font-family: 'Space Mono', monospace;
    font-size: 1.3rem;
    letter-spacing: 0.24rem;
    font-weight: bold;
    padding-right: 5%;
    border-radius: 3%;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.input:focus,
textarea:focus {
    background-color: var(--clr-light);
    outline: none;
}

.input::placeholder {
    text-align: left;
    font-size: 1.6rem;
    font-weight: normal;
    margin-left: 5%;
    color: var(--clr-light);
}


/* Tip Calculation */

.tip h2,
.tip p {
    margin-bottom: 0;
    margin-left: 6%;
    margin-top: 0;
    text-transform: uppercase;
}

.tip h2 {
    font-size: 1.1rem;
    color: var(--clr-white);
    letter-spacing: 0.1rem;
}

#tip-amount {
    padding-top: 10%;
}

.tip p {
    font-size: 0.7rem;
    letter-spacing: 0.05rem;
    color: var(--text-faded);
}

.tip h3 {
    font-size: 2rem;
    position: relative;
    left: 57.5%;
    top: -7vh;
    margin-top: 0;
    margin-bottom: 0;
    color: var(--clr-active);
}

.tip button {
    width: 80%;
    height: 10vh;
    margin-left: 10%;
    margin-bottom: 10%;
    border-radius: 2vw;
    border: none;
    background-color: var(--clr-active);
    color: var(--text-dark);
    font-size: 1.3rem;
    font-weight: bold;
    letter-spacing: 0.2rem;
}

